// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`generate llms.txt should generate llms.txt 1`] = `
[
  {
    "type": "return",
    "value": 
"# Test

> Test description

Test details

## Second test

- [Test link](https://test.com): Test link description

## Third test

- [Third test link](https://third.test.com)"
,
  },
]
`;

exports[`generate markdown files should generate markdown files 1`] = `
[
  {
    "type": "return",
    "value": 
"---
title: Test
description: Test description
sidebar:
  order: 1
  title: Custom sidebar title
---

# Test

Some content we want to transform.

TRANSFORM_THIS

---
title: This should not be replaced
---


\`\`\`js
console.log("Hello, world!");
\`\`\`
"
,
  },
]
`;

exports[`generate markdown files should generate markdown files with custom frontmatter 1`] = `
[
  {
    "type": "return",
    "value": 
"---
title: Test
description: Test description
---

# Test

Some content we want to transform.

TRANSFORM_THIS

---
title: This should not be replaced
---


\`\`\`js
console.log("Hello, world!");
\`\`\`
"
,
  },
]
`;

exports[`generate markdown files should transform using remarkPlugins 1`] = `
[
  {
    "type": "return",
    "value": 
"---
title: Test
description: Test description
sidebar:
  order: 1
  title: Custom sidebar title
---

# Test

Some content we want to transform.

NICE\\_TRANSFORMATION

***

## title: This should not be replaced

\`\`\`js
console.log("Hello, world!");
\`\`\`
"
,
  },
]
`;
